force-app/main/default/objects/OrgStorageSnapshot__c/OrgStorageSnapshot__c.object-meta.xml
<CustomObject>
    <description>Daily snapshots of org storage usage for trend analysis</description>
    <fields>
        <fullName>SnapshotDate__c</fullName>
        <label>Snapshot Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SnapshotDateKey__c</fullName>
        <externalId>true</externalId>
        <label>Snapshot Date Key</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Org Storage Snapshot</label>
    <nameField>
        <displayFormat>SNAP-{0000}</displayFormat>
        <label>Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Storage Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>