force-app/main/default/objects/OrgStorageSnapshot__c/fields/DataMBMax__c.field-meta.xml
<CustomField>
    <fullName>DataMBMax__c</fullName>
    <label>Data Storage Limit (MB)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>