force-app/main/default/objects/OrgStorageSnapshot__c/fields/DataMBUsed__c.field-meta.xml
<CustomField>
    <fullName>DataMBUsed__c</fullName>
    <label>Data Storage Used (MB)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>