force-app/main/default/objects/OrgStorageSnapshot__c/fields/FileMBMax__c.field-meta.xml
<CustomField>
    <fullName>FileMBMax__c</fullName>
    <label>File Storage Limit (MB)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>