force-app/main/default/objects/OrgStorageSnapshot__c/fields/FileMBUsed__c.field-meta.xml
<CustomField>
    <fullName>FileMBUsed__c</fullName>
    <label>File Storage Used (MB)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>