force-app/main/default/objects/OrgStorageSnapshot__c/fields/SnapshotDate__c.field-meta.xml
<CustomField>
    <fullName>SnapshotDate__c</fullName>
    <label>Snapshot Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>