force-app/main/default/objects/OrgStorageSnapshot__c/fields/SnapshotDateKey__c.field-meta.xml
<CustomField>
    <fullName>SnapshotDateKey__c</fullName>
    <externalId>true</externalId>
    <label>Snapshot Date Key</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>